Coverage Advisor Added

--- a/main.ipynb
+++ b/main.ipynb
@@ -31,7 +31,8 @@
     "from os.path import basename\n",
     "from email.mime.text import MIMEText\n",
     "from email.mime.multipart import MIMEMultipart\n",
-    "from email.mime.base import MIMEBase"
+    "from email.mime.base import MIMEBase\n",
+    "from string import printable"
    ]
   },
   {
@@ -88,13 +89,16 @@
     "    format_date = []\n",
     "    for index, value in serie.iteritems():\n",
     "        if type(value) != datetime and type(value) != Timestamp:  \n",
-    "            if type(value) == float or value != value:\n",
+    "            if pd.isnull(value) or value != value:\n",
+    "                #Fechas vacias\n",
     "                value = datetime.strptime('2030-2-2 00:00:00', '%Y-%m-%d %H:%M:%S')\n",
     "                format_date.append(value)\n",
     "            else: \n",
+    "                #Error de formato\n",
     "                value = datetime.strptime('2050-2-2 00:00:00', '%Y-%m-%d %H:%M:%S')\n",
     "                format_date.append(value)\n",
     "        else:\n",
+    "            #Fechas normales\n",
     "            value = datetime.strptime(str(value), '%Y-%m-%d %H:%M:%S')\n",
     "            format_date.append(value)\n",
     "    \n",
@@ -166,21 +170,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx')\n",
-    "ca.dropna(axis=0, subset=['Account'], inplace=True)\n",
-    "ca.drop(list(ca[ca['Account']==0].index), axis=0, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Date Received\n",
     "\n",
-    "date_received = ca[['Request ID', 'Date received']].copy()\n",
-    "date_received['Date received'] = format_date_column(date_received['Date received'])"
+    "date_received = ca[['Request ID', 'Date received', 'PAR Requested']].copy()\n",
+    "date_received['Date received'] = format_date_column(date_received['Date received'])\n",
+    "date_received['PAR Requested'] = format_date_column(date_received['PAR Requested'])\n",
+    "\n",
+    "for index, row in date_received.iterrows():\n",
+    "    if row['Date received'] == Timestamp('2030-2-2 00:00:00'):\n",
+    "        date_received['Date received'].loc[index] = 'Empty Date'\n",
+    "    elif row['Date received'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "        date_received['Date received'].loc[index] = 'Format Error'\n",
+    "    elif row['Date received'] < Timestamp('2021-10-15 00:00:00'):\n",
+    "        date_received['Date received'].loc[index] = '15/oct error'\n",
+    "    elif row['Date received'] > row['PAR Requested']:\n",
+    "        date_received['Date received'].loc[index] = 'Date greater than PAR requested'\n",
+    "    else:\n",
+    "        date_received['Date received'].loc[index] = None\n",
+    "\n",
+    "date_received.dropna(axis=0, subset=['Date received'], inplace=True)\n",
+    "date_received.drop(axis=1, columns=['PAR Requested'], inplace=True)"
    ]
   },
   {
@@ -189,125 +198,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for index, row in date_received.iterrows():\n",
-    "    "
+    "# Coverage Advisor\n",
+    "\n",
+    "cov_adv = ca[['Request ID', 'Coverage Advisor']].copy()\n",
+    "\n",
+    "for index, row in cov_adv.iterrows():\n",
+    "    if pd.isnull(row['Coverage Advisor']) == True:\n",
+    "        cov_adv['Coverage Advisor'].loc[index] = 'Empty Name'\n",
+    "    elif set(row['Coverage Advisor']).difference(printable):\n",
+    "        cov_adv['Coverage Advisor'].loc[index] = 'Special Caracter in Name'\n",
+    "    else:\n",
+    "        cov_adv['Coverage Advisor'].loc[index] = None\n",
+    "\n",
+    "cov_adv.dropna(axis=0, subset=['Coverage Advisor'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Request ID</th>\n",
-       "      <th>Date received</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>103120.0</td>\n",
-       "      <td>2021-10-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>102639.0</td>\n",
-       "      <td>2021-10-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>102732.0</td>\n",
-       "      <td>2021-10-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>103048.0</td>\n",
-       "      <td>2021-10-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>103106.0</td>\n",
-       "      <td>2021-10-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1564</th>\n",
-       "      <td>115650.0</td>\n",
-       "      <td>2030-02-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1565</th>\n",
-       "      <td>116119.0</td>\n",
-       "      <td>2030-02-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1566</th>\n",
-       "      <td>111891.0</td>\n",
-       "      <td>2030-02-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1567</th>\n",
-       "      <td>115641.0</td>\n",
-       "      <td>2030-02-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1568</th>\n",
-       "      <td>114355.0</td>\n",
-       "      <td>2030-02-02</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1566 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Request ID Date received\n",
-       "0       103120.0    2021-10-14\n",
-       "1       102639.0    2021-10-14\n",
-       "2       102732.0    2021-10-14\n",
-       "3       103048.0    2021-10-14\n",
-       "4       103106.0    2021-10-14\n",
-       "...          ...           ...\n",
-       "1564    115650.0    2030-02-02\n",
-       "1565    116119.0    2030-02-02\n",
-       "1566    111891.0    2030-02-02\n",
-       "1567    115641.0    2030-02-02\n",
-       "1568    114355.0    2030-02-02\n",
-       "\n",
-       "[1566 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 171,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "date_received"
+    "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx')\n",
+    "ca.dropna(axis=0, subset=['Account'], inplace=True)\n",
+    "ca.drop(list(ca[ca['Account']==0].index), axis=0, inplace=True)"
    ]
   },
   {
