Date 1st contact logic added

--- a/main.ipynb
+++ b/main.ipynb
@@ -46,7 +46,8 @@
     "    ,filename = 'Coverage Advisor Tracker OFICIAL.xlsx')\n",
     "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx')\n",
     "ca.dropna(axis=0, subset=['Account'], inplace=True)\n",
-    "ca.drop(list(ca[ca['Account']==0].index), axis=0, inplace=True)"
+    "ca.drop(list(ca[ca['Account']==0].index), axis=0, inplace=True)\n",
+    "ca.dropna(axis=0, subset=['Request ID'], inplace=True)"
    ]
   },
   {
@@ -156,7 +157,7 @@
     "for index, row in upcoming_renewal.iterrows():\n",
     "    if pd.isna(row['Upcoming Renewal']) == True:\n",
     "        upcoming_renewal['Upcoming Renewal'].loc[index] = 'Empty Value'\n",
-    "    elif len(row['Upcoming Renewal']) > 6:v\n",
+    "    elif len(row['Upcoming Renewal']) > 6:\n",
     "        upcoming_renewal['Upcoming Renewal'].loc[index] = 'Value with space'\n",
     "    else:    \n",
     "        upcoming_renewal['Upcoming Renewal'].loc[index] = None\n",
@@ -219,9 +220,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# PAR Requested\n",
+    "\n",
+    "PAR_req = ca[['Request ID', 'Date received', 'PAR Requested']].copy()\n",
+    "PAR_req['Date received'] = format_date_column(PAR_req['Date received'])\n",
+    "PAR_req['PAR Requested'] = format_date_column(PAR_req['PAR Requested'])\n",
+    "\n",
+    "for index, row in PAR_req.iterrows():\n",
+    "    if row['PAR Requested'] == Timestamp('2030-2-2 00:00:00'):\n",
+    "        PAR_req['PAR Requested'].loc[index] = 'Empty Date'\n",
+    "    elif row['PAR Requested'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "        PAR_req['PAR Requested'].loc[index] = 'Format Error'\n",
+    "    elif row['Date received'] > row['PAR Requested']:\n",
+    "        PAR_req['PAR Requested'].loc[index] = 'Date Received greater than PAR requested'\n",
+    "    else:\n",
+    "        PAR_req['PAR Requested'].loc[index] = None\n",
+    "\n",
+    "PAR_req.dropna(axis=0, subset=['PAR Requested'], inplace=True)\n",
+    "PAR_req.drop(axis=1, columns=['Date received'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Date 1st contact\n",
+    "d_f_contact = ca[['Request ID', 'Date received', 'Date First Contact']].copy()\n",
+    "d_f_contact['Date received'] = format_date_column(d_f_contact['Date received'])\n",
+    "d_f_contact['Date First Contact'] = format_date_column(d_f_contact['Date First Contact'])\n",
+    "\n",
+    "for index, row in d_f_contact.iterrows():\n",
+    "    if row['Date First Contact'] == Timestamp('2030-2-2 00:00:00'):\n",
+    "        d_f_contact['Date First Contact'].loc[index] = None\n",
+    "    elif row['Date First Contact'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "        d_f_contact['Date First Contact'].loc[index] = 'Format Error'\n",
+    "    elif row['Date received'] > row['Date First Contact']:\n",
+    "        d_f_contact['Date First Contact'].loc[index] = 'Date Received greater than First Contact'\n",
+    "    else:\n",
+    "        d_f_contact['Date First Contact'].loc[index] = None\n",
+    "\n",
+    "d_f_contact.dropna(axis=0, subset=['Date First Contact'], inplace=True)\n",
+    "d_f_contact.drop(axis=1, columns=['Date received'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx')\n",
     "ca.dropna(axis=0, subset=['Account'], inplace=True)\n",
     "ca.drop(list(ca[ca['Account']==0].index), axis=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merging new tables\n",
+    "new_table = request_type.merge(join_call, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            upcoming_renewal, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            date_received, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            cov_adv, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            PAR_req, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            d_f_contact, how='left', left_on='Request ID', right_on='Request ID')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_table.to_csv('t.csv')"
    ]
   },
   {
