--- a/main.ipynb
+++ b/main.ipynb
@@ -271,6 +271,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# PAR Received\n",
+    "\n",
+    "PAR_recev = ca[['Request ID', 'PAR Requested', 'PAR Received']].copy()\n",
+    "PAR_recev['PAR Requested'] = format_date_column(PAR_recev['PAR Requested'])\n",
+    "PAR_recev['PAR Received'] = format_date_column(PAR_recev['PAR Received'])\n",
+    "\n",
+    "for index, row in PAR_recev.iterrows():\n",
+    "    if row['PAR Received'] == Timestamp('2030-2-2 00:00:00'):\n",
+    "        PAR_recev['PAR Received'].loc[index] = None\n",
+    "    elif row['PAR Received'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "        PAR_recev['PAR Received'].loc[index] = 'Format Error'\n",
+    "    elif row['PAR Requested'] > row['PAR Received']:\n",
+    "        PAR_recev['PAR Received'].loc[index] = 'PAR Requested greater than PAR received'\n",
+    "    else:\n",
+    "        PAR_recev['PAR Received'].loc[index] = None\n",
+    "\n",
+    "PAR_recev.dropna(axis=0, subset=['PAR Received'], inplace=True)\n",
+    "PAR_recev.drop(axis=1, columns=['PAR Requested'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx')\n",
     "ca.dropna(axis=0, subset=['Account'], inplace=True)\n",
     "ca.drop(list(ca[ca['Account']==0].index), axis=0, inplace=True)"
@@ -278,7 +304,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Date Analysis\n",
+    "\n",
+    "dat_nalys = ca[['Request ID', 'PAR Received', 'Date Analysis']].copy()\n",
+    "dat_nalys['Date Analysis'] = format_date_column(dat_nalys['Date Analysis'])\n",
+    "dat_nalys['PAR Received'] = format_date_column(dat_nalys['PAR Received'])\n",
+    "\n",
+    "for index, row in dat_nalys.iterrows():\n",
+    "    if row['Date Analysis'] == Timestamp('2030-2-2 00:00:00'):\n",
+    "        dat_nalys['Date Analysis'].loc[index] = None\n",
+    "    elif row['Date Analysis'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "        dat_nalys['Date Analysis'].loc[index] = 'Format Error'\n",
+    "    elif row['PAR Received'] > row['Date Analysis']:\n",
+    "        dat_nalys['Date Analysis'].loc[index] = 'PAR Requested greater than PAR received'\n",
+    "    else:\n",
+    "        dat_nalys['Date Analysis'].loc[index] = None\n",
+    "\n",
+    "dat_nalys.dropna(axis=0, subset=['Date Analysis'], inplace=True)\n",
+    "dat_nalys.drop(axis=1, columns=['PAR Received'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +340,9 @@
     "            date_received, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
     "            cov_adv, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
     "            PAR_req, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
-    "            d_f_contact, how='left', left_on='Request ID', right_on='Request ID')"
+    "            d_f_contact, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            PAR_recev, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            dat_nalys, how='left', left_on='Request ID', right_on='Request ID')"
    ]
   },
   {
