More validation columns added

--- a/main.ipynb
+++ b/main.ipynb
@@ -185,12 +185,24 @@
     "    elif row['Date received'] < Timestamp('2021-10-15 00:00:00'):\n",
     "        date_received['Date received'].loc[index] = '15/oct error'\n",
     "    elif row['Date received'] > row['PAR Requested']:\n",
-    "        date_received['Date received'].loc[index] = 'Date greater than PAR requested'\n",
+    "        if row['PAR Requested'] != (Timestamp('2030-2-2 00:00:00') or Timestamp('2050-2-2 00:00:00')):\n",
+    "            date_received['Date received'].loc[index] = 'Date greater than PAR requested'\n",
+    "        else:\n",
+    "            date_received['Date received'].loc[index] = None\n",
     "    else:\n",
     "        date_received['Date received'].loc[index] = None\n",
     "\n",
     "date_received.dropna(axis=0, subset=['Date received'], inplace=True)\n",
     "date_received.drop(axis=1, columns=['PAR Requested'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "date_received"
    ]
   },
   {
@@ -232,7 +244,10 @@
     "    elif row['PAR Requested'] == Timestamp('2050-2-2 00:00:00'):\n",
     "        PAR_req['PAR Requested'].loc[index] = 'Format Error'\n",
     "    elif row['Date received'] > row['PAR Requested']:\n",
-    "        PAR_req['PAR Requested'].loc[index] = 'Date Received greater than PAR requested'\n",
+    "        if row['Date received'] != (Timestamp('2030-2-2 00:00:00') or Timestamp('2050-2-2 00:00:00')):\n",
+    "            PAR_req['PAR Requested'].loc[index] = 'Date Received greater than PAR requested'\n",
+    "        else:\n",
+    "            PAR_req['PAR Requested'].loc[index] = None\n",
     "    else:\n",
     "        PAR_req['PAR Requested'].loc[index] = None\n",
     "\n",
@@ -257,7 +272,10 @@
     "    elif row['Date First Contact'] == Timestamp('2050-2-2 00:00:00'):\n",
     "        d_f_contact['Date First Contact'].loc[index] = 'Format Error'\n",
     "    elif row['Date received'] > row['Date First Contact']:\n",
-    "        d_f_contact['Date First Contact'].loc[index] = 'Date Received greater than First Contact'\n",
+    "        if row['Date received'] != (Timestamp('2030-2-2 00:00:00') or Timestamp('2050-2-2 00:00:00')):\n",
+    "            d_f_contact['Date First Contact'].loc[index] = 'Date Received greater than First Contact'\n",
+    "        else:\n",
+    "            d_f_contact['Date First Contact'].loc[index] = None\n",
     "    else:\n",
     "        d_f_contact['Date First Contact'].loc[index] = None\n",
     "\n",
@@ -283,23 +301,15 @@
     "    elif row['PAR Received'] == Timestamp('2050-2-2 00:00:00'):\n",
     "        PAR_recev['PAR Received'].loc[index] = 'Format Error'\n",
     "    elif row['PAR Requested'] > row['PAR Received']:\n",
-    "        PAR_recev['PAR Received'].loc[index] = 'PAR Requested greater than PAR received'\n",
+    "        if row['PAR Requested'] != (Timestamp('2030-2-2 00:00:00') or Timestamp('2050-2-2 00:00:00')):\n",
+    "            PAR_recev['PAR Received'].loc[index] = 'PAR Requested greater than PAR received'\n",
+    "        else:\n",
+    "            PAR_recev['PAR Received'].loc[index] = None\n",
     "    else:\n",
     "        PAR_recev['PAR Received'].loc[index] = None\n",
     "\n",
     "PAR_recev.dropna(axis=0, subset=['PAR Received'], inplace=True)\n",
     "PAR_recev.drop(axis=1, columns=['PAR Requested'], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ca = pd.read_excel ('Coverage Advisor Tracker OFICIAL.xlsx')\n",
-    "ca.dropna(axis=0, subset=['Account'], inplace=True)\n",
-    "ca.drop(list(ca[ca['Account']==0].index), axis=0, inplace=True)"
    ]
   },
   {
@@ -320,7 +330,10 @@
     "    elif row['Date Analysis'] == Timestamp('2050-2-2 00:00:00'):\n",
     "        dat_nalys['Date Analysis'].loc[index] = 'Format Error'\n",
     "    elif row['PAR Received'] > row['Date Analysis']:\n",
-    "        dat_nalys['Date Analysis'].loc[index] = 'PAR Requested greater than PAR received'\n",
+    "        if row['PAR Received'] != (Timestamp('2030-2-2 00:00:00') or Timestamp('2050-2-2 00:00:00')):\n",
+    "            dat_nalys['Date Analysis'].loc[index] = 'PAR received greater than Date Analysis'\n",
+    "        else:\n",
+    "            dat_nalys['Date Analysis'].loc[index] = None\n",
     "    else:\n",
     "        dat_nalys['Date Analysis'].loc[index] = None\n",
     "\n",
@@ -334,15 +347,167 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Pre Readout Effort\n",
+    "\n",
+    "pre_reffor = ca[['Request ID', 'Pre-Readout Effort (min)', 'Account Stage']].copy()\n",
+    "\n",
+    "for j, row in pre_reffor.iterrows():\n",
+    "    if pd.isna(row['Pre-Readout Effort (min)']) == True:\n",
+    "        if pd.isna(row['Account Stage']) == False:\n",
+    "            if row['Account Stage'][0] == 'F':\n",
+    "                pre_reffor['Pre-Readout Effort (min)'].loc[j] = 'empty value'\n",
+    "    elif row['Pre-Readout Effort (min)'] > 180:\n",
+    "        pre_reffor['Pre-Readout Effort (min)'].loc[j] = 'value above 180'\n",
+    "    else:\n",
+    "        pre_reffor['Pre-Readout Effort (min)'].loc[j] = None\n",
+    "\n",
+    "pre_reffor.dropna(axis=0, subset=['Pre-Readout Effort (min)'], inplace=True)\n",
+    "pre_reffor.drop(axis=1, columns=['Account Stage'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Date Inite Sent\n",
+    "\n",
+    "date_init_s = ca[['Request ID', 'Date First Contact', 'Date Invite Sent']].copy()\n",
+    "date_init_s['Date Invite Sent'] = format_date_column(date_init_s['Date Invite Sent'])\n",
+    "date_init_s['Date First Contact'] = format_date_column(date_init_s['Date First Contact'])\n",
+    "\n",
+    "for index, row in date_init_s.iterrows():\n",
+    "    if row['Date Invite Sent'] == Timestamp('2030-2-2 00:00:00'):\n",
+    "        date_init_s['Date Invite Sent'].loc[index] = None\n",
+    "    elif row['Date Invite Sent'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "        date_init_s['Date Invite Sent'].loc[index] = 'Format Error'\n",
+    "    elif row['Date First Contact'] > row['Date Invite Sent']:\n",
+    "        if row['Date First Contact'] != (Timestamp('2030-2-2 00:00:00') or Timestamp('2050-2-2 00:00:00')):\n",
+    "            date_init_s['Date Invite Sent'].loc[index] = 'Date First Contact greater than Date Invite Sent'\n",
+    "        else:\n",
+    "            date_init_s['Date Invite Sent'].loc[index] = None\n",
+    "    else:\n",
+    "        date_init_s['Date Invite Sent'].loc[index] = None\n",
+    "\n",
+    "date_init_s.dropna(axis=0, subset=['Date Invite Sent'], inplace=True)\n",
+    "date_init_s.drop(axis=1, columns=['Date First Contact'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Date Schedule\n",
+    "\n",
+    "date_sche = ca[['Request ID', 'Date Invite Sent', 'Date Scheduled', 'Date Readout Done']].copy()\n",
+    "date_sche['Date Invite Sent'] = format_date_column(date_sche['Date Invite Sent'])\n",
+    "date_sche['Date Scheduled'] = format_date_column(date_sche['Date Scheduled'])\n",
+    "date_sche['Date Readout Done'] = format_date_column(date_sche['Date Readout Done'])\n",
+    "\n",
+    "for index, row in date_sche.iterrows():\n",
+    "    if row['Date Scheduled'] == Timestamp('2030-2-2 00:00:00'):\n",
+    "        date_sche['Date Scheduled'].loc[index] = None\n",
+    "    elif row['Date Scheduled'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "        date_sche['Date Scheduled'].loc[index] = 'Format Error'\n",
+    "    elif row['Date Scheduled'] != row['Date Readout Done']:\n",
+    "        if row['Date Readout Done'] != (Timestamp('2030-2-2 00:00:00') or Timestamp('2050-2-2 00:00:00')):\n",
+    "            date_sche['Date Scheduled'].loc[index] = 'Scheduled and Readout Done are different'\n",
+    "        else:\n",
+    "            date_sche['Date Scheduled'].loc[index] = None\n",
+    "    elif row['Date Invite Sent'] > row['Date Scheduled']:\n",
+    "        if row['Date Invite Sent'] != (Timestamp('2030-2-2 00:00:00') or Timestamp('2050-2-2 00:00:00')):\n",
+    "            date_sche['Date Scheduled'].loc[index] = 'Invite Sent greater than Scheduled'\n",
+    "        else:\n",
+    "            date_sche['Date Scheduled'].loc[index] = None\n",
+    "    else:\n",
+    "        date_sche['Date Scheduled'].loc[index] = None\n",
+    "\n",
+    "date_sche.dropna(axis=0, subset=['Date Scheduled'], inplace=True)\n",
+    "date_sche.drop(axis=1, columns=['Date Invite Sent'], inplace=True)\n",
+    "date_sche.drop(axis=1, columns=['Date Readout Done'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Date Readout Done\n",
+    "\n",
+    "date_red_don = ca[['Request ID', 'Date Scheduled', 'Date Readout Done', 'Status']].copy()\n",
+    "date_red_don['Date Scheduled'] = format_date_column(date_red_don['Date Scheduled'])\n",
+    "date_red_don['Date Readout Done'] = format_date_column(date_red_don['Date Readout Done'])\n",
+    "\n",
+    "for index, row in date_red_don.iterrows():\n",
+    "    if row['Date Readout Done'] == Timestamp('2030-2-2 00:00:00'):\n",
+    "        if pd.isnull(row['Status']) == False:\n",
+    "            if row['Status'][0] != 'F':\n",
+    "                date_red_don['Date Readout Done'].loc[index] = 'Value mustnt be empty'\n",
+    "            else:\n",
+    "                date_red_don['Date Readout Done'].loc[index] = None\n",
+    "        else:\n",
+    "            date_red_don['Date Readout Done'].loc[index] = None\n",
+    "    elif row['Date Scheduled'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "        date_red_don['Date Readout Done'].loc[index] = 'Format Error'\n",
+    "    elif row['Date Scheduled'] != row['Date Readout Done']:\n",
+    "        if row['Date Scheduled'] != (Timestamp('2030-2-2 00:00:00') or Timestamp('2050-2-2 00:00:00')):\n",
+    "            date_red_don['Date Readout Done'].loc[index] = 'Scheduled and Readout Done are different'\n",
+    "        else:\n",
+    "            date_red_don['Date Readout Done'].loc[index] = None\n",
+    "    else:\n",
+    "        date_red_don['Date Readout Done'].loc[index] = None\n",
+    "\n",
+    "date_red_don.dropna(axis=0, subset=['Date Readout Done'], inplace=True)\n",
+    "date_red_don.drop(axis=1, columns=['Date Scheduled'], inplace=True)\n",
+    "date_red_don.drop(axis=1, columns=['Status'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Readout Duration (min)\n",
+    "\n",
+    "read_min = ca[['Request ID', 'Date Readout Done', 'Readout Duration (min)']].copy()\n",
+    "\n",
+    "for j, row in read_min.iterrows():\n",
+    "    if pd.isnull(row['Date Readout Done']) == False and pd.isnull(row['Readout Duration (min)']) == True:\n",
+    "        read_min['Readout Duration (min)'].loc[j] = 'Value mustnt be empty'\n",
+    "    elif row['Readout Duration (min)'] > 180:\n",
+    "        read_min['Readout Duration (min)'].loc[j] = 'Value to high'\n",
+    "    else:\n",
+    "        read_min['Readout Duration (min)'].loc[j] = None\n",
+    "\n",
+    "read_min.dropna(axis=0, subset=['Readout Duration (min)'], inplace=True)\n",
+    "read_min.drop(axis=1, columns=['Date Readout Done'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Merging new tables\n",
-    "new_table = request_type.merge(join_call, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
-    "            upcoming_renewal, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
-    "            date_received, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
-    "            cov_adv, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
-    "            PAR_req, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
-    "            d_f_contact, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
-    "            PAR_recev, how='left', left_on='Request ID', right_on='Request ID').merge(\n",
-    "            dat_nalys, how='left', left_on='Request ID', right_on='Request ID')"
+    "new_table = request_type.merge(join_call, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            upcoming_renewal, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            date_received, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            cov_adv, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            PAR_req, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            d_f_contact, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            PAR_recev, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            dat_nalys, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            pre_reffor, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            date_init_s, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            date_sche, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            date_red_don, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            read_min, how='outer', left_on='Request ID', right_on='Request ID')"
    ]
   },
   {
