More validation added

--- a/main.ipynb
+++ b/main.ipynb
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,6 +494,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Status\n",
+    "\n",
+    "c_status = ca[['Request ID', 'Account Stage', 'Status']].copy()\n",
+    "\n",
+    "for j, row in c_status.iterrows():\n",
+    "    if pd.isnull(row['Account Stage']) == False and pd.isnull(row['Status']) == True:\n",
+    "        c_status['Status'].loc[j] = 'must fill this cell'\n",
+    "    else:\n",
+    "        c_status['Status'].loc[j] = None\n",
+    "\n",
+    "c_status.dropna(axis=0, subset=['Status'], inplace=True)\n",
+    "c_status.drop(axis=1, columns=['Account Stage'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delivery Type\n",
+    "\n",
+    "del_type = ca[['Request ID', 'Date Readout Done', 'Delivery Type']].copy()\n",
+    "\n",
+    "for id, row in del_type.iterrows():\n",
+    "    if pd.isnull(row['Delivery Type']) == True:\n",
+    "        del_type['Delivery Type'].loc[id] = 'Empty value'\n",
+    "    elif pd.isna(row['Date Readout Done']) == True and row['Delivery Type'] != 'Not presented':\n",
+    "        del_type['Delivery Type'].loc[id] = 'should be: Not Presented'\n",
+    "    else:\n",
+    "        del_type['Delivery Type'].loc[id] = None\n",
+    "\n",
+    "del_type.dropna(axis=0, subset=['Delivery Type'], inplace=True)\n",
+    "del_type.drop(axis=1, columns=['Date Readout Done'], inplace=True)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reason Declined\n",
+    "\n",
+    "reason_decl = ca[['Request ID', 'Status', 'Reason Declined']].copy()\n",
+    "\n",
+    "for index, row in reason_decl.iterrows():\n",
+    "    if pd.isnull(row['Status']) == True:\n",
+    "        reason_decl['Reason Declined'].loc[index] = None\n",
+    "    elif row['Status'][2] == 'D' and pd.isnull(row['Reason Declined']) == True:\n",
+    "        reason_decl['Reason Declined'].loc[index] = 'Empty Value'\n",
+    "    else:\n",
+    "        reason_decl['Reason Declined'].loc[index] = None\n",
+    "\n",
+    "reason_decl.dropna(axis=0, subset=['Reason Declined'], inplace=True)\n",
+    "reason_decl.drop(axis=1, columns=['Status'], inplace=True) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Merging new tables\n",
     "new_table = request_type.merge(join_call, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "            upcoming_renewal, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
@@ -507,7 +571,10 @@
     "            date_init_s, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "            date_sche, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "            date_red_don, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
-    "            read_min, how='outer', left_on='Request ID', right_on='Request ID')"
+    "            read_min, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            c_status, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            del_type, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            reason_decl, how='outer', left_on='Request ID', right_on='Request ID')\n"
    ]
   },
   {
