Added logic Reason Declined Lvl 2

--- a/main.ipynb
+++ b/main.ipynb
@@ -558,6 +558,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Reason Declined Lvl 2\n",
+    "\n",
+    "reason_decl2 = ca[['Request ID', 'Reason Declined', 'Reason Declined Lvl 2']].copy()\n",
+    "\n",
+    "for index, row in reason_decl2.iterrows():\n",
+    "    if pd.isnull(row['Reason Declined']) == False and pd.isnull(row['Reason Declined Lvl 2']) == True:\n",
+    "        reason_decl2['Reason Declined Lvl 2'].loc[index] = 'Empty Value'\n",
+    "    else:\n",
+    "        reason_decl2['Reason Declined Lvl 2'].loc[index] = None\n",
+    "\n",
+    "reason_decl2.dropna(axis=0, subset=['Reason Declined Lvl 2'], inplace=True)\n",
+    "reason_decl2.drop(axis=1, columns=['Reason Declined'], inplace=True) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Merging new tables\n",
     "new_table = request_type.merge(join_call, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "            upcoming_renewal, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
@@ -574,7 +594,8 @@
     "            read_min, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "            c_status, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "            del_type, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
-    "            reason_decl, how='outer', left_on='Request ID', right_on='Request ID')\n"
+    "            reason_decl, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            reason_decl2, how='outer', left_on='Request ID', right_on='Request ID')\n"
    ]
   },
   {
