Reason On Hold and Days on Hold - added

--- a/main.ipynb
+++ b/main.ipynb
@@ -578,6 +578,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Reason On Hold and Days on Hold\n",
+    "\n",
+    "reas_hold = ca[['Request ID', 'Reason On Hold', 'Days on Hold']].copy()\n",
+    "\n",
+    "for index, row in reas_hold.iterrows():\n",
+    "    if pd.isna(row['Reason On Hold']) == True and pd.isna(row['Days on Hold']) == False:\n",
+    "        reas_hold['Reason On Hold'].loc[index] = 'Empty Value'\n",
+    "        reas_hold['Days on Hold'].loc[index] = None\n",
+    "    elif pd.isna(row['Reason On Hold']) == False and pd.isna(row['Days on Hold']) == True:\n",
+    "        reas_hold['Days on Hold'].loc[index] = 'Empty Value'\n",
+    "        reas_hold['Reason On Hold'].loc[index] = None\n",
+    "    else:\n",
+    "        reas_hold['Reason On Hold'].loc[index] = None\n",
+    "        reas_hold['Days on Hold'].loc[index] = None\n",
+    "\n",
+    "reas_hold.dropna(axis=0, how='all', subset=['Reason On Hold', 'Days on Hold'], inplace=True) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Merging new tables\n",
     "new_table = request_type.merge(join_call, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "            upcoming_renewal, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
@@ -595,7 +619,8 @@
     "            c_status, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "            del_type, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
     "            reason_decl, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
-    "            reason_decl2, how='outer', left_on='Request ID', right_on='Request ID')\n"
+    "            reason_decl2, how='outer', left_on='Request ID', right_on='Request ID').merge(\n",
+    "            reas_hold, how='outer', left_on='Request ID', right_on='Request ID')\n"
    ]
   },
   {
