Added line code to format the resulting file

--- a/main.ipynb
+++ b/main.ipynb
@@ -823,16 +823,8 @@
     "new_table.dropna(axis=0, how='all', subset=new_table.columns[2:], inplace=True)  \n",
     "t_names = ca[['Request ID','Coverage Advisor']]\n",
     "new_table = t_names.merge(new_table, how='right', left_on='Request ID', right_on='Request ID')\n",
-    "new_table.to_excel('error_report_%s.xlsx' % today, index=False)    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#excel_formating.format_excel()"
+    "new_table.to_excel('error_report_%s.xlsx' % today, index=False)    \n",
+    "excel_formating.format_excel()"
    ]
   },
   {
