The message sent was modified
1 - HTML of the message modified.
2 - The string text message now include the personalized name of each
  coverage employee.

--- a/main.ipynb
+++ b/main.ipynb
@@ -73,9 +73,10 @@
     "password = 'EasyP4ssword78'\n",
     "subjectEmail = 'Coverage error report'\n",
     "\n",
-    "msg1 = \"\"\"<h1>Hola</h1>\n",
-    "        <h3>Por favor revisa el archivo adjunto para encontrar el detalle de los errores</h3>\n",
-    "        <h3>Asegurate de que tus registros esten corregidos y al d&iacute;a</h3>\"\"\""
+    "msg1 = \"\"\"<h3>Hola, %s</h3>\n",
+    "        <p><span style=\"color: rgb(71, 85, 119);\">Parece que tienes varios errores en la informaci&oacute;n registrada en tus cuentas.</span></p>\n",
+    "        <p><span style=\"color: rgb(71, 85, 119);\">Asegurate de revisar el archivo adjunto para validar los campos que est&aacute;n generando conflictos.</span></p>\n",
+    "        <p><span style=\"color: rgb(71, 85, 119);\">Feliz D&iacute;a.</span></p>\"\"\""
    ]
   },
   {
@@ -895,7 +896,7 @@
    "source": [
     "for i, sheet in mail_table.iterrows():\n",
     "    if pd.isnull(sheet['Email']) == False:\n",
-    "        send_msg(sheet['Email'], myMail, subjectEmail , msg1, True)\n",
+    "        send_msg(sheet['Email'], myMail, subjectEmail , msg1 % sheet['Coverage Advisor'], True)\n",
     "        print(sheet['Email'])"
    ]
   },
