--- a/Main.ipynb
+++ b/Main.ipynb
@@ -97,6 +97,87 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Advisor // Advisor Name // Date Advisor Assigned\n",
+    "\n",
+    "Advisor = df_compass[['Request ID', 'RR (internal)', 'Advisor', 'Advisor Name', 'Date Advisor Assigned']].copy()\n",
+    "Advisor['Date Advisor Assigned'] = format_date_column(Advisor['Date Advisor Assigned']) \n",
+    "\n",
+    "for id, row in Advisor.iterrows():\n",
+    "    if row['RR (internal)'] == 'Yes':\n",
+    "        if pd.isnull(row['Advisor']) == True:\n",
+    "            Advisor.loc[id, 'Advisor'] = 'Empty'\n",
+    "        else:\n",
+    "            Advisor.loc[id, 'Advisor'] = None\n",
+    "\n",
+    "        if pd.isnull(row['Advisor Name']) == True:\n",
+    "            Advisor.loc[id, 'Advisor Name'] = 'Empty Name'\n",
+    "        else:\n",
+    "            Advisor.loc[id, 'Advisor Name'] = None\n",
+    "\n",
+    "        if row['Date Advisor Assigned'] == Timestamp('2030-2-2 00:00:00'):\n",
+    "            Advisor.loc[id, 'Date Advisor Assigned'] = 'Empty date'\n",
+    "        elif row['Date Advisor Assigned'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "            Advisor.loc[id, 'Date Advisor Assigned'] = 'Format Error'\n",
+    "        else:\n",
+    "            Advisor.loc[id, 'Date Advisor Assigned'] = None    \n",
+    "    else:\n",
+    "        Advisor.loc[id, 'Advisor'] = None\n",
+    "        Advisor.loc[id, 'Advisor Name'] = None\n",
+    "        Advisor.loc[id, 'Date Advisor Assigned'] = None\n",
+    "\n",
+    "Advisor.dropna(axis=0, how='all', subset=['Advisor', 'Advisor Name', 'Date Advisor Assigned'], inplace=True)\n",
+    "Advisor.drop(axis=1, columns=['RR (internal)'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Date Readaout Done\n",
+    "\n",
+    "dat_rdone = df_compass[['Request ID', 'Date Advisor Assigned', 'Date Readout Done']].copy()\n",
+    "dat_rdone['Date Advisor Assigned'] = format_date_column(dat_rdone['Date Advisor Assigned']) \n",
+    "dat_rdone['Date Readout Done'] = format_date_column(dat_rdone['Date Readout Done']) \n",
+    "\n",
+    "for id, row in dat_rdone.iterrows():\n",
+    "    if row['Date Readout Done'] != Timestamp('2030-2-2 00:00:00') and row['Date Readout Done'] != Timestamp('2050-2-2 00:00:00'):\n",
+    "        if row['Date Advisor Assigned'] != Timestamp('2030-2-2 00:00:00') and row['Date Advisor Assigned'] != Timestamp('2050-2-2 00:00:00'):\n",
+    "            if row['Date Advisor Assigned'] > row['Date Readout Done']:\n",
+    "                dat_rdone.loc[id, 'Date Readout Done'] = 'Date Advisor Assigned greater'\n",
+    "            else:\n",
+    "                dat_rdone.loc[id, 'Date Readout Done'] = None\n",
+    "        else:\n",
+    "            dat_rdone.loc[id, 'Date Readout Done'] = None \n",
+    "    elif row['Date Readout Done'] == Timestamp('2030-2-2 00:00:00') and row['Date Advisor Assigned'] != Timestamp('2030-2-2 00:00:00'):\n",
+    "        dat_rdone.loc[id, 'Date Readout Done'] = 'Empty Date'\n",
+    "    elif row['Date Readout Done'] == Timestamp('2050-2-2 00:00:00'):\n",
+    "        dat_rdone.loc[id, 'Date Readout Done'] = 'Format error'\n",
+    "    else:\n",
+    "        dat_rdone.loc[id, 'Date Readout Done'] = None\n",
+    "\n",
+    "dat_rdone.dropna(axis=0, subset=['Date Readout Done'], inplace=True)\n",
+    "dat_rdone.drop(axis=1, columns=['Date Advisor Assigned'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge\n",
+    "\n",
+    "final_report = Advisor.merge(dat_rdone, how='outer', left_on='Request ID', right_on='Request ID')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
